--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "76d8de72",
+   "id": "b3d7b335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1c72b5bd",
+   "id": "5d5bd808",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0086a1da",
+   "id": "c5a8b668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d40dc7fd",
+   "id": "e567d167",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5bb8d34e",
+   "id": "19a3f164",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cf747396",
+   "id": "5c85a66d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c42661c1",
+   "id": "30a6adf3",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1153a956",
+   "id": "93865745",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1720f6b8",
+   "id": "6dd715a4",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "53c3eda5",
+   "id": "e5f5e4d0",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6668d5b7",
+   "id": "6cef738a",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "675be27f",
+   "id": "55cce0df",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "27eca71f",
+   "id": "a129ad86",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b8e4e634",
+   "id": "1b3d1695",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "53f3ae0a",
+   "id": "17f7eb7e",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d749508c",
+   "id": "cf9a0c24",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbd8f870",
+   "id": "2f49c2d7",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8e57def1",
+   "id": "e517ed3f",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6d358c50",
+   "id": "b60e398b",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d414fd55",
+   "id": "1cd76ced",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8f17e627",
+   "id": "bb577566",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "323e2c4b",
+   "id": "57611c50",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a22a6f11",
+   "id": "73021432",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dff5981",
+   "id": "4fdd0aa1",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "353ab901",
+   "id": "47172360",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "65412764",
+   "id": "947e2490",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7f332601",
+   "id": "31f7cbcb",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "943f98be",
+   "id": "e01259b3",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "4503e042",
+   "id": "5da62d1d",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0f6069e4",
+   "id": "6a3b3d98",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "993804f8",
+   "id": "8c02eb65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "b0aef34b",
+   "id": "0b4d6d59",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "8cb5a241",
+   "id": "2cd6e982",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "f312113d",
+   "id": "cf01525a",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4308cc5d",
+   "id": "8d8fbc48",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "663f3699",
+   "id": "1635babc",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "77f1a93d",
+   "id": "2d696158",
    "metadata": {},
    "outputs": [
     {
@@ -833,19 +833,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "65ccef90",
+   "execution_count": 119,
+   "id": "6fda5d24",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n",
-      "a\n",
-      "ab\n",
-      "abc\n",
-      "abc\n",
       "a\n",
       "b\n",
       "c\n"
@@ -858,8 +853,7 @@
     "    for letter in texte:\n",
     "        if letter not in res:\n",
     "            res += letter\n",
-    "        print(res)\n",
-    "    return res\n",
+    "            yield letter\n",
     "\n",
     "for lettre in lettre_unique(\"aabca\"):\n",
     "    print(lettre)"
@@ -867,8 +861,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "337c4c3d",
+   "execution_count": 120,
+   "id": "18a5181c",
    "metadata": {},
    "outputs": [
     {
@@ -880,14 +874,14 @@
     }
    ],
    "source": [
-    "iterable = iter(\"abc\")\n",
+    "iterable = lettre_unique(\"abc\")\n",
     "print(next(iterable))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "8dc3d997",
+   "execution_count": 121,
+   "id": "f345a04b",
    "metadata": {},
    "outputs": [
     {
@@ -904,8 +898,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "ea9b4bbd",
+   "execution_count": 122,
+   "id": "7f19ad0e",
    "metadata": {},
    "outputs": [
     {
@@ -922,8 +916,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "fb2e3c60",
+   "execution_count": 123,
+   "id": "e5dc8c78",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +927,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [118], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mnext\u001b[39m(iterable))\n",
+      "Cell \u001b[0;32mIn [123], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mnext\u001b[39m(iterable))\n",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -945,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f74af26",
+   "id": "96e9b270",
    "metadata": {},
    "outputs": [],
    "source": []
