--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f5bda73",
+   "id": "92f30217",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6bd7df7a",
+   "id": "f1b9c758",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2eae9a02",
+   "id": "5295c6a4",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ff512949",
+   "id": "1278893f",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "5963ee6b",
+   "id": "c01a3d82",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6273afef",
+   "id": "c3e5aab1",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b8247080",
+   "id": "911e3876",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b8fa61c3",
+   "id": "9acd31eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c87fd6",
+   "id": "9638b7ab",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -220,12 +220,13 @@
     "* manipulations d'itérables \n",
     "* création de générateurs \n",
     "    * les générateurs sont des fonctions où l'on utilise le mot clé `yield`\n",
-    "    * les yields sont des \"returns intermédiaires\", ils vont mettre la fonction en pause, retourner un résultat, puis la fonction pourra reprendre de là où elle s'est arrêtée"
+    "    * les yields sont des \"returns intermédiaires\", ils vont mettre la fonction en pause, retourner un résultat, puis la fonction pourra reprendre de là où elle s'est arrêtée\n",
+    "* les iterables (listes, dict, tuples, set, generateurs) sont parcurus à l'aide de la fonction `next`, cette fonction va renvoyer la valeur suivante de l'itérateur, quand on arrive à la fin, elle va lever une exception `StopIteration`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6397b89f",
+   "id": "390d135e",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -255,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b215f13",
+   "id": "f41c1be4",
    "metadata": {},
    "outputs": [],
    "source": []
