--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b3d7b335",
+   "id": "255ffad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5d5bd808",
+   "id": "97e422ec",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c5a8b668",
+   "id": "23cc672f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e567d167",
+   "id": "19f1161c",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "19a3f164",
+   "id": "db7a52b7",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5c85a66d",
+   "id": "bb174e72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "30a6adf3",
+   "id": "5ee83449",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "93865745",
+   "id": "a077207c",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6dd715a4",
+   "id": "1c1999e7",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e5f5e4d0",
+   "id": "436c23d0",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6cef738a",
+   "id": "e0ad288d",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "55cce0df",
+   "id": "ca0a77a6",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a129ad86",
+   "id": "9c8f5454",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1b3d1695",
+   "id": "f8fe2dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "17f7eb7e",
+   "id": "4b8b3297",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9a0c24",
+   "id": "c51c7248",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f49c2d7",
+   "id": "992c4de6",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e517ed3f",
+   "id": "6ec9f841",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b60e398b",
+   "id": "a6a7213d",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd76ced",
+   "id": "4e9669c6",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "bb577566",
+   "id": "2a7da597",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "57611c50",
+   "id": "706634c3",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "73021432",
+   "id": "867e7699",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fdd0aa1",
+   "id": "dd097590",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "47172360",
+   "id": "08013463",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "947e2490",
+   "id": "7c148f71",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "31f7cbcb",
+   "id": "e5a59615",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e01259b3",
+   "id": "086c4943",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "5da62d1d",
+   "id": "4de41b31",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6a3b3d98",
+   "id": "303a4f10",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8c02eb65",
+   "id": "bdf9f76f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0b4d6d59",
+   "id": "0f3ead57",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2cd6e982",
+   "id": "18a56ca0",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "cf01525a",
+   "id": "19361757",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "8d8fbc48",
+   "id": "88abe22f",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "1635babc",
+   "id": "eef031ea",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "2d696158",
+   "id": "4055c744",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "6fda5d24",
+   "id": "1ef1dded",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "18a5181c",
+   "id": "cb9f1ad9",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "f345a04b",
+   "id": "129a8540",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "7f19ad0e",
+   "id": "4ae8cd9a",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "e5dc8c78",
+   "id": "d2c5c8a2",
    "metadata": {},
    "outputs": [
     {
@@ -938,8 +938,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "id": "9333cf80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_set = set([1, 1, 2, 3])\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "96e9b270",
+   "id": "24ebb244",
    "metadata": {},
    "outputs": [],
    "source": []
