--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "255ffad7",
+   "id": "6c94fd90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "97e422ec",
+   "id": "5c522510",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "23cc672f",
+   "id": "ef935ee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "19f1161c",
+   "id": "123099df",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "db7a52b7",
+   "id": "a3f95b76",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bb174e72",
+   "id": "cc977f39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5ee83449",
+   "id": "e39943a8",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a077207c",
+   "id": "543d2d3c",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1c1999e7",
+   "id": "8b55419c",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "436c23d0",
+   "id": "e0e07056",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e0ad288d",
+   "id": "0234d0cb",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ca0a77a6",
+   "id": "840d31d3",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9c8f5454",
+   "id": "034ba823",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f8fe2dfc",
+   "id": "705da3a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4b8b3297",
+   "id": "eec42952",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c51c7248",
+   "id": "ca075a0b",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "992c4de6",
+   "id": "bf6ba432",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6ec9f841",
+   "id": "0997f477",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a6a7213d",
+   "id": "511848b8",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e9669c6",
+   "id": "bff61f0f",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2a7da597",
+   "id": "14fd0b37",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "706634c3",
+   "id": "64e3f453",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "867e7699",
+   "id": "cea1e363",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd097590",
+   "id": "f3d0b45b",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "08013463",
+   "id": "4a44e32a",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7c148f71",
+   "id": "3c5a3251",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e5a59615",
+   "id": "99b26d87",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "086c4943",
+   "id": "1ce81b1c",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "4de41b31",
+   "id": "d6118aeb",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "303a4f10",
+   "id": "09087a4d",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "bdf9f76f",
+   "id": "966ed367",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0f3ead57",
+   "id": "2c82aa83",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "18a56ca0",
+   "id": "210fe923",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "19361757",
+   "id": "5b06cfff",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "88abe22f",
+   "id": "f9b7b0d1",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "eef031ea",
+   "id": "5e1b544f",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "4055c744",
+   "id": "7ad01868",
    "metadata": {},
    "outputs": [
     {
@@ -833,8 +833,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "1ef1dded",
+   "execution_count": 128,
+   "id": "fafcf9f6",
    "metadata": {},
    "outputs": [
     {
@@ -842,8 +842,8 @@
      "output_type": "stream",
      "text": [
       "a\n",
-      "b\n",
-      "c\n"
+      "c\n",
+      "b\n"
      ]
     }
    ],
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "cb9f1ad9",
+   "id": "561fea5d",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "129a8540",
+   "id": "080d3692",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "4ae8cd9a",
+   "id": "9c22142e",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "d2c5c8a2",
+   "id": "ec2a136f",
    "metadata": {},
    "outputs": [
     {
@@ -938,19 +938,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "9333cf80",
+   "execution_count": 129,
+   "id": "3567c253",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "my_set = set([1, 1, 2, 3])\n",
-    "print(m)"
+    "my_set = set([3, 1, 1, 2, 3])\n",
+    "print(my_set)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ebb244",
+   "id": "20574a30",
    "metadata": {},
    "outputs": [],
    "source": []
